# mnist

./: .env.dist  .gitignore  Dockerfile  Makefile  pyproject.toml  run.py
configs/: config.yaml
configs/callbacks/: cutmix.yaml  default.yaml  dropout.yaml  ema.yaml  mixup.yaml  v1.yaml
configs/datamodule/: default.yaml
configs/experiment/: v1.yaml
configs/logger/: tensorboard.yaml  wandb.yaml
configs/losses/: ce.yaml
configs/metrics/: accuracy.yaml  precision.yaml  recall.yaml  v1.yaml
configs/mode/: debug.yaml  default.yaml
configs/model/: effnet_b0.yaml
configs/optimizer/: adamw.yaml  radam.yaml
configs/scheduler/: cosine_restart.yaml
configs/trainer/: debug.yaml  default.yaml
datamodules/: __init__.py  base.py
utils/: __init__.py  initialize.py  registry.py
