[tool.poetry]
name = "mnist"
version = "0.1.0"
description = "An example of using the `fulmo` library for a classification problem with mnist collection data."
authors = ["jexio <ptjexio@gmail.com>"]
license = "MIT"

readme = "README.md"
homepage = "https://github.com/jexio/mnist"
repository = "https://github.com/jexio/mnist"
keywords = ["hydra", "pytorch", "pytorch-lightning", "poetry", "template"]
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",

    "License :: OSI Approved :: MIT License",

    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "<3.10,>=3.8"
torch-optimizer = "^0.1.0"
python-dotenv = "^0.19.0"
fulmo = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
